[MacViews] Track mouse and position content correctly in fullscreen

During full screen mode, we need to track mouse movement around top UI
to lock the system menu bar. This CL sets up the correct area for such
tracking.

Also, when system menu bar slides down in full screen, only the top UI
will appears under the menu bar while the position of web content should
not move.

BUG=864931,865155, 831219

Change-Id: Ie121e6f27dd24066c1ae1e133740f01c75f118a5
Reviewed-on: https://chromium-review.googlesource.com/1142694
Commit-Queue: Wei Li <weili@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576533}
Former-commit-id: 1406837c85633743729c75ec61f02e45b852f1f2